   * Added an option to disable the "loading save from a different version"
     confirmation dialog
   * Line-wrap author names in the add-on description dialog (bug #18691)
   * Added option in advanced preferences that allows the twelve-hour clock
      format to be used
   * Reenabled "delay shroud updates"
   * Chanaged: Disable pango markup in unit names (bug #17788)
 * WML engine:
   * Readded the liminal alignment
   * Added four-difficulty versions of certain macros: QUANTITY4,
     ON_DIFFICULTY4, TURNS4, GOLD4, INCOME4, and ATTACK_DEPTH4
   * added support for SSF to SUF via a [filter_side] subtag
   * added support for [enemy_of]<SSF> to SSF
   * added support for [allied_with]<SSF> to SSF
   * New [find_path] tag, a WML interface to the pathfinder
   * Add inline SSF support to [store_starting_location]
   * Add support for [capture_village][filter_side]<SSF>
   * Added FACING, which adds facing= to a previous [unit] codeblock
   * Added VARIATION, which adds variation= to a previous [unit] codeblock
   * Deprecated the Add-on.cfg style in favor of Add-on/_main.cfg, except for
     the case of a single-file add-on
   * [illuminated_time], which has been obsolete for a long time, is no longer
     valid. Using it will cause errors to be thrown
   * Reintroduced support for [unit][event]s (was until 1.7.10, bug #16259)
     Such events are no longer forcefully variable substituted before inserting
     into the scenario wml
   * Fixed "error parsing image modifications" message caused by subsequent
     image mod additions using the add attribute in [effect] apply_to=image_mod
   * Made $this_unit in filter_recall work
   * Added IS_EXPENDABLE_LEADER, which gives a unit the expendable leader icon
   * Added $this_unit support to [harm_unit] and [find_path]
   * Settings by [color_adjust] no longer expire at turn start or over save/load
     cycles
   * Implemented bullet= for [objectives], [objective], [gold_carryover], and
     [note]