@@ -59,6 +59,8 @@ Version 1.9.9+svn:
       format to be used
    * Reenabled "delay shroud updates"
    * Chanaged: Disable pango markup in unit names (bug #17788)
+   * It is now possible to remove multiple installed add-ons at the same
+     time
  * WML engine:
    * Readded the liminal alignment
    * Added four-difficulty versions of certain macros: QUANTITY4,
